Removed java 11 nio dependency and refactored for java 8